Added ReachedSet interface
- CPAAlgorithm now deals with ReachedSet only that encapsulates reached and
  simpleReached (the projection of abstractelements)
- LocationMappedReachedSet has been converted appropriately
- A specific CompositeReachedSet is required but still missing
- MyCollection, as used in QueryDrivenProgramTesting, is not yet completed

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@318 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -50,7 +50,11 @@ Warning: Should not have multiple jump edges leaving at line: 1232
   ERROR, r170 is ok)
 
 - The use of LocationMappedReachedSet in
-  cpa.symbpredabs.explicit.ExplicitStopOperator is currently broken because of
+  icpa.symbpredabs.explicit.ExplicitStopOperator is currently broken because of
   the disparity of reached vs. simpleReached; this results in a performance
   penalty of 10-20% according to recent regression testing
+  -- this has been fixed in r318, but deserves further testing whether it is
+  really fixed
+
+
 
