Added a simple wrapper that projects reached to simpleReached. A special case for LocationMappedReachedSet is still missing, so ExplicitStopOperator is still not fixed.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@320 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -55,6 +55,7 @@ Warning: Should not have multiple jump edges leaving at line: 1232
   penalty of 10-20% according to recent regression testing
   -- this has been fixed in r318, but deserves further testing whether it is
   really fixed
+  -- the fix in r318 was reverted in r319
 
 
 
