Added note on TheoremProver and related interfaces
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@334 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -77,4 +77,6 @@ Warning: Should not have multiple jump edges leaving at line: 1232
     AbstractElementWithLocation becomes a defining part of the ReachedSet
     interface, ReachedSet cannot be used as part of each and every CPA
 
+- Refactor the TheoremProver (and similarly named ones) interfaces and move all
+  the decision procedures related stuff to its own package
 
