Updated benchmark results
- Some errors of r170 have been fixed meanwhile, updated master results to
  reflect this

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@371 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/regression-test/results.master/README
+++ b/test/regression-test/results.master/README
@@ -1,3 +1,5 @@
 The results have been computed on cs-sel-02.cs.surrey.sfu.ca on 2008-12-10, using r170 of SVN-trunk
 - runtimes were updated on 2008-12-30 (some updates to the JRE probably caused a
   slowdown of some of the runs)
+- Results of tests with errors in r170 updated using the data from r247 obtained
+  on 2008-12-31, where the errors have been fixed meanwhile
