Noted version causing the assertion violation
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@386 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -14,6 +14,8 @@ Warning: Should not have multiple jump edges leaving at line: 1232
   using cpa.symbpredabs.explicit.ExplicitCPA (delta debugging needed, r308 has
   ERROR, r170 is ok), applying the above patch yields further assertion
   violations in r325, checking against r274 in progress
+  -- This is caused by the change in r267, requires investigation by Alberto and
+  Erkan
 
 - [MT] compositestop is broken (does not care about precision)
 
