updated runtimes of testing examples
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@428 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/regression-test/testing/results.master/README
+++ b/test/regression-test/testing/results.master/README
@@ -1,1 +1,2 @@
 The results have been computed on joey.forsyte on 2009-01-10, using r422 of SVN-trunk
+- runtimes updates using r425 on joey.forsyte
