Updated results using the output of r432
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@433 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/regression-test/results.master/README
+++ b/test/regression-test/results.master/README
@@ -3,3 +3,5 @@ The results have been computed on cs-sel-02.cs.surrey.sfu.ca on 2008-12-10, usin
   slowdown of some of the runs)
 - Results of tests with errors in r170 updated using the data from r247 obtained
   on 2008-12-31, where the errors have been fixed meanwhile
+- Runtimes of all tests not yielding errors in r432 were updated using the
+  results computed on 2009-01-11
