--- a/test/regression-test/testing/results.master/README
+++ b/test/regression-test/testing/results.master/README
@@ -1,2 +1,3 @@
 The results have been computed on joey.forsyte on 2009-01-10, using r422 of SVN-trunk
 - runtimes updates using r425 on joey.forsyte
+- results of ssh and ntdriver examples updated using results from r432
