- Added notes about unusable config options - Added examples that break ExplicitCPA in a horrible way (only the modulo stuff   is fixed thus far, longest example is 33 lines in total and requires 2   predicates)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@442 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -96,3 +96,16 @@
 - [MT] precisionAdjustment is currently not enabled! (code commented out in
   CPAAlgorithm)
 
+- [MT] Setting cpas.symbpredabs.mathsat.useCache to false causes a null pointer
+  exception (with ExplicitCPA, at least)
+
+- [MT] Setting cpas.symbpredabs.explicit.getUsefulBlocks to false results in a
+  failing assertion in getInstance of the mathsat manager code (with
+  ExplicitCPA, at least)
+
+- [MT] Setting cpas.symbpredabs.shortestCexTrace to false causes some error I
+  can't remember right now, easily reproducible with ExplicitCPA
+
+
+
+
