Do not skip DeclarationEdge when building abstractions
- Fixes problem in handling of global variables in ExplicitCPA
- This is kind of a follow-up to r395 and I still don't like that piece of code
  (see ToDo.txt)



git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@456 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -102,6 +102,10 @@
 - [MT] Setting cpas.symbpredabs.shortestCexTrace to false causes some error I
   can't remember right now, easily reproducible with ExplicitCPA
 
-
+- [MT] Skipping BlankEdge in
+  src/cpa/symbpredabs/explicit/BDDMathsatExplicitAbstractManager.java is
+  dangerous; however, commenting out that piece of code breaks ExplicitCPA on
+  several examples, which must be due to some other bug in ExplicitCPA (other
+  CPAs relying on that piece of code don't break)
 
 
