Added remark about configuration of cpas.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@498 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -131,3 +131,6 @@
 - [MT] Properties of the CFA (like function entry points) should not be
   evaluated in each CPA again and again, this info must be built into the CFA
 
+- [AH] Provide configuration to every CPA via its constructor instead of having
+  a global static variable in order to improve decoupling and reusability.
+
