CFAFunctionDefinitionNode.getContainingFileName is nearly dead
- I think we should better get rid of that code, it doesn't seem to work as
  expected and is hardly ever used

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@510 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -134,3 +134,9 @@
 - [AH] Provide configuration to every CPA via its constructor instead of having
   a global static variable in order to improve decoupling and reusability.
 
+- [MT] CFAFunctionDefinitionNode.getContainingFileName is used only 2 times in a
+  not-so-well maintained CPA and refers to property analysis.programs, which is
+  not defined in any of the current config files. Even when I added the
+  property, I couldn't make the corresponding code work. Please get rid of that
+  piece of code.
+
