--- a/Authors.txt
+++ b/Authors.txt
@@ -3,9 +3,9 @@ Authors/Maintainers:
   Erkan Keremoglu
 
 Contributors:
-  Alberto Griggio (2008)
-  Andreas Holzer (2008)
-  Michael Tautschnig (2008)
+  Alberto Griggio (2008, 2009)
+  Andreas Holzer (2008, 2009)
+  Michael Tautschnig (2008, 2009)
 
 Bug reports:
   Dirk Beyer: firstname.lastname@sfu.ca
