--- a/Authors.txt
+++ b/Authors.txt
@@ -6,6 +6,7 @@ Contributors:
   Alberto Griggio (2008, 2009)
   Andreas Holzer (2008, 2009)
   Michael Tautschnig (2008, 2009)
+  Philipp Wendler (2009)
 
 Bug reports:
   Dirk Beyer: firstname.lastname@sfu.ca
